apps/base/productivity/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ExternalName
  externalName: home.internal.${DOMAIN}
  ports:
    - name: http
      port: 8123
      protocol: TCP
