apps/base/productivity/home-assistant/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: home-assistant-lan
      services:
        - name: home-assistant
          port: 8123
  tls:
    certResolver: letsencrypt
    domains:
      - main: home.local.${DOMAIN}
